fixed date web binding, fixed pet update